add nexus shmem support
